# bitku-fast

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: gui.rs  lib.rs  main.rs  password_checker.rs  wallet.rs
