[package]
name = "btc-recovery-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# 加密库 - 纯 Rust 实现，CI 无需 NASM。
# 在支持 SHA-NI 的 CPU 上，Rust 编译器会自动通过 LLVM 内联优化，性能接近 asm 版本
sha2 = "0.10"
aes = { version = "0.8", features = ["zeroize"] }
cbc = "0.1"
block-padding = "0.3"

# 并行处理
rayon = "1.8"
crossbeam = "0.8"

# GUI
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"
rfd = "0.14"

# 字体支持
ab_glyph = "0.2"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }

# 工具
anyhow = "1.0"
thiserror = "1.0"
memmap2 = "0.9"
byteorder = "1.5"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
